--- a/src/container/Menu/Menu.module.scss
+++ b/src/container/Menu/Menu.module.scss
@@ -76,7 +76,245 @@
       min-width: 380px;
       max-width: 380px;
       width: calc(100% / 3 - 40px);
-      height: 210px;
+      height: 170px;
+      cursor: pointer;
+
+      &.about {
+        .card {
+          background-color: #26c6d0;
+
+          p:nth-child(2) {
+            &:after {
+              position: absolute;
+              right: -5px;
+              bottom: 5px;
+              display: block;
+              width: 10px;
+              height: 10px;
+              border-radius: 50%;
+              background: #ee6c8a;
+              content: '';
+            }
+          }
+        }
+
+        &:hover {
+          &::after {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border-radius: 20px;
+            background: url('~assets/images/menu01.png') no-repeat;
+            background-size: cover;
+            content: '';
+          }
+
+          .card {
+            p:nth-child(2) {
+              &:after {
+                animation: bounce 1s ease-in-out 3;
+              }
+            }
+          }
+        }
+      }
+
+      &.careers {
+        .card {
+          background-color: #e6a94e;
+
+          p:nth-child(2) {
+            &:after {
+              position: absolute;
+              right: -15px;
+              bottom: 5px;
+              display: block;
+              width: 10px;
+              height: 10px;
+              border-radius: 50%;
+              background: #ee6c8a;
+              content: '';
+            }
+          }
+        }
+
+        &:hover {
+          &::after {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border-radius: 20px;
+            background: url('~assets/images/menu02.png') no-repeat;
+            background-size: cover;
+            content: '';
+          }
+
+          .card {
+            p:nth-child(2) {
+              &:after {
+                animation: bounce 1s ease-in-out 3;
+              }
+            }
+          }
+        }
+      }
+
+      &.services {
+        .card {
+          background-color: #585880;
+
+          p:nth-child(2) {
+            &:after {
+              position: absolute;
+              right: -5px;
+              bottom: 5px;
+              display: block;
+              width: 10px;
+              height: 10px;
+              border-radius: 50%;
+              background: #ee6c8a;
+              content: '';
+            }
+          }
+        }
+
+        &:hover {
+          &::after {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border-radius: 20px;
+            background: url('~assets/images/menu03.png') no-repeat;
+            background-size: cover;
+            content: '';
+          }
+
+          .card {
+            p:nth-child(2) {
+              &:after {
+                animation: bounce 1s ease-in-out 3;
+              }
+            }
+          }
+        }
+      }
+
+      &.works {
+        .card {
+          background-color: #ee6c8a;
+
+          p:nth-child(2) {
+            &:after {
+              position: absolute;
+              right: -17px;
+              bottom: 5px;
+              display: block;
+              width: 10px;
+              height: 10px;
+              border-radius: 50%;
+              background: #26c6d0;
+              content: '';
+            }
+          }
+        }
+
+        &:hover {
+          &::after {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border-radius: 20px;
+            background: url('~assets/images/menu04.png') no-repeat;
+            background-size: cover;
+            content: '';
+          }
+
+          .card {
+            p:nth-child(2) {
+              &:after {
+                animation: bounce 1s ease-in-out 3;
+              }
+            }
+          }
+        }
+      }
+
+      &.insights {
+        .card {
+          background-color: #26d0a8;
+
+          p:nth-child(2) {
+            &:after {
+              position: absolute;
+              right: -15px;
+              bottom: 5px;
+              display: block;
+              width: 10px;
+              height: 10px;
+              border-radius: 50%;
+              background: #ee6c8a;
+              content: '';
+            }
+          }
+        }
+
+        &:hover {
+          &::after {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border-radius: 20px;
+            background: url('~assets/images/menu05.png') no-repeat;
+            background-size: cover;
+            content: '';
+          }
+
+          .card {
+            p:nth-child(2) {
+              &:after {
+                animation: bounce 1s ease-in-out 3;
+              }
+            }
+          }
+        }
+      }
+
+      &.contact {
+        .card {
+          background-color: #fff;
+
+          p {
+            color: #262626;
+            white-space: nowrap;
+          }
+
+          p:nth-child(2) {
+            color: #26c6d0;
+
+            &:after {
+              position: absolute;
+              right: 95px;
+              bottom: 5px;
+              display: block;
+              width: 10px;
+              height: 10px;
+              border-radius: 50%;
+              background: #ee6c8a;
+              content: '';
+            }
+          }
+        }
+
+        &:hover {
+          .card {
+            p:nth-child(2) {
+              &:after {
+                animation: bounce 1s ease-in-out 3;
+              }
+            }
+          }
+        }
+      }
     }
 
     .card {
@@ -87,38 +325,6 @@
       width: 100%;
       height: 100%;
       border-radius: 20px;
-
-      &.about {
-        background-color: #26c6d0;
-      }
-
-      &.careers {
-        background-color: #e6a94e;
-      }
-
-      &.services {
-        background-color: #585880;
-      }
-
-      &.works {
-        background-color: #ee6c8a;
-      }
-
-      &.insights {
-        background-color: #26d0a8;
-      }
-
-      &.contact {
-        background-color: #fff;
-
-        p {
-          color: #262626;
-        }
-
-        p:nth-child(2) {
-          color: #26c6d0;
-        }
-      }
 
       img {
         margin-right: 27px;
@@ -200,6 +406,20 @@
           transition-delay: 0.2s;
 }
 
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
 @media screen and (max-width: 480px) {
   .nav {
     .header {
@@ -219,9 +439,74 @@
       }
 
       .item {
-        margin-right: 0;
-        margin-bottom: 0;
-        padding: 20px;
+        margin: 10px 20px;
+        min-width: 320px;
+
+        &.about {
+          .card {
+            p:nth-child(2) {
+              &:after {
+                right: 18px;
+                bottom: 5px;
+              }
+            }
+          }
+        }
+
+        &.careers {
+          .card {
+            p:nth-child(2) {
+              &:after {
+                right: 7px;
+                bottom: 5px;
+              }
+            }
+          }
+        }
+
+        &.services {
+          .card {
+            p:nth-child(2) {
+              &:after {
+                right: 13px;
+                bottom: 5px;
+              }
+            }
+          }
+        }
+
+        &.works {
+          .card {
+            p:nth-child(2) {
+              &:after {
+                right: 0;
+                bottom: 5px;
+              }
+            }
+          }
+        }
+
+        &.insights {
+          .card {
+            p:nth-child(2) {
+              &:after {
+                right: -5px;
+                bottom: 5px;
+              }
+            }
+          }
+        }
+
+        &.contact {
+          .card {
+            p:nth-child(2) {
+              &:after {
+                right: 90px;
+                bottom: 5px;
+              }
+            }
+          }
+        }
       }
 
       .card {
@@ -263,14 +548,15 @@
     }
 
     .content {
+      margin-top: 50px;
+
       .inner {
         overflow: auto;
       }
 
       .item {
-        margin-right: 0;
-        margin-bottom: 0;
-        padding: 20px;
+        margin: 10px 20px;
+        height: 150px;
       }
 
       .card {
